--- a/package.json
+++ b/package.json
@@ -10,24 +10,24 @@
     "monit": "pm2 monit"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
-    "compression": "^1.6.2",
-    "connect-multiparty": "^2.0.0",
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "connect-multiparty": "^2.2.0",
     "cookie-parser": "~1.3.5",
-    "cors": "^2.8.1",
+    "cors": "^2.8.5",
     "debug": "~2.2.0",
-    "express": "~4.13.1",
+    "express": "^4.17.1",
     "hbs": "~3.1.0",
-    "highlight.js": "^9.4.0",
+    "highlight.js": "^9.15.8",
     "js-md5": "^0.4.1",
-    "marked": "^0.3.5",
-    "moment": "^2.15.1",
-    "mongodb": "^2.2.10",
-    "mongoose": "^4.6.2",
-    "morgan": "~1.6.1",
-    "multer": "^1.1.0",
-    "request": "^2.83.0",
-    "serve-favicon": "~2.3.0",
+    "marked": "^0.6.2",
+    "moment": "^2.24.0",
+    "mongodb": "^2.2.36",
+    "mongoose": "^4.13.18",
+    "morgan": "^1.9.1",
+    "multer": "^1.4.1",
+    "request": "^2.88.0",
+    "serve-favicon": "^2.5.0",
     "superagent": "^2.3.0",
     "superagent-jsonapify": "^1.4.2"
   }
